# voice-assist

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: run_https.sh
static/: client.js  index.html
