[project]
name = "voice-backend"
version = "0.1.0"
description = "Lightweight backend for a WebRTC voice assistant."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastrtc[vad, stt, tts, stopword]",
    "fastapi",
    "humaware-vad",
    "openai",
    "openai-agents",
    "uvicorn",
    "numpy",
]
